--- a/app.css
+++ b/app.css
@@ -23,123 +23,96 @@ button {
     size: 20px;
 } */
 body {
-    margin: 0;
-    min-width: 250px;
-  }
-  
-  /* Include the padding and border in an element's total width and height */
-  * {
-    box-sizing: border-box;
-  }
-  .strikethrough {
-    text-decoration: line-through;
+  margin: 0;
+  min-width: 250px;
+  background-color: rgb(143, 183, 183);
 }
-  /* Remove margins and padding from the list */
-  ul {
-    margin: 0;
-    padding: 0;
-  }
+
+/* Include the padding and border in an element's total width and height */
+* {
+  box-sizing: border-box;
+}
+.strikethrough {
+  text-decoration: line-through;
+}
+/* Remove margins and padding from the list */
+ol {
+  position: absolute;
+}
+
+/* Style the list items */
+ol li {
+  cursor: pointer;
+  background: #eae0e0;
+  font-size: 20px;
   
-  /* Style the list items */
-  ul li {
-    cursor: pointer;
-    position: relative;
-    padding: 12px 8px 12px 40px;
-    list-style-type: none;
-    background: #eee;
-    font-size: 18px;
-    transition: 0.2s;
-    
-    /* make the list items unselectable */
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-  }
-  
-  /* Set all odd list items to a different color (zebra-stripes) */
-  ul li:nth-child(odd) {
-    background: #f9f9f9;
-  }
-  
-  /* Darker background-color on hover */
-  ul li:hover {
-    background: #ddd;
-  }
-  
-  /* When clicked on, add a background color and strike out text */
-  ul li.checked {
-    background: #888;
-    color: #fff;
-    text-decoration: line-through;
-  }
-  
-  /* Add a "checked" mark when clicked on */
-  ul li.checked::before {
-    content: '';
-    position: absolute;
-    border-color: #fff;
-    border-style: solid;
-    border-width: 0 2px 2px 0;
-    top: 10px;
-    left: 16px;
-    transform: rotate(45deg);
-    height: 15px;
-    width: 7px;
-  }
-  
-  /* Style the close button */
-  .close {
-    position: absolute;
-    right: 0;
-    top: 0;
-    padding: 12px 16px 12px 16px;
-  }
-  
-  .close:hover {
-    background-color: #f44336;
-    color: white;
-  }
-  
-  /* Style the header */
-  .header {
-    background-color: #f44336;
-    padding: 30px 40px;
-    color: white;
-    text-align: center;
-  }
-  
-  /* Clear floats after the header */
-  .header:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
-  
-  /* Style the input */
-  input {
-    margin: 0;
-    border: none;
-    border-radius: 0;
-    width: 75%;
-    padding: 10px;
-    float: left;
-    font-size: 16px;
-  }
-  
-  /* Style the "Add" button */
-  .addBtn {
-    padding: 10px;
-    width: 25%;
-    background: #d9d9d9;
-    color: #555;
-    float: left;
-    text-align: center;
-    font-size: 16px;
-    cursor: pointer;
-    transition: 0.3s;
-    border-radius: 0;
-  }
-  
-  .addBtn:hover {
-    background-color: #bbb;
+}
+input[type="checkbox"] {
+  position: absolute;
+  float: right;
+}
+
+/* Set all odd list items to a different color (zebra-stripes) */
+ol li:nth-child(odd) {
+  background: #f9f9f9;
+}
+
+/* Style the close button */
+.delete {
+  position: absolute;
+  float: right;
+  font-size: 15px;
+}
+
+.delete:hover {
+  background-color: #f44336;
+  color: white;
+}
+
+/* Style the header */
+.header {
+  background-color: #ee5348;
+  padding: 30px 40px;
+  color: white;
+  text-align: center;
+}
+
+/* Style the input */
+input {
+  margin: 0;
+  border: #2a2929;
+  border-radius: 15px;
+  width: 85%;
+  padding: 10px;
+  float: left;
+  font-size: 16px;
+}
+
+/* Style the "Add" button */
+.addBtn {
+  padding: 10px;
+  width: 15%;
+  background: #b6aaaa;
+  color: #4a3a3a;
+  float: left;
+  text-align: center;
+  font-size: 16px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: 0.3s;
+  border-radius: 15px;
+  border-color: dimgray;
+  border-width: 1.5px;
+  font-family: sans-serif;
+}
+
+.addBtn:hover {
+  background-color: #19c9a0;
+}
+
+label {
+  font-family: sans-serif;
+  font-size: 20px;
+  color: #3e3c3c;
+  font-weight: bold;
+}
